# cargo-tribute

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  THIRD-PARTY-NOTICES  THIRD-PARTY.md  rustfmt.toml  tribute.toml
.github/workflows/: ci.yml  release.yml
LICENSES/: Apache-2.0.txt  Unicode-3.0.txt
src/: audit.rs  config.rs  harvest.rs  main.rs  output.rs  policy.rs
tests/: cli.rs
