[package]
name = "cargo-tribute"
version = "0.3.1"
edition = "2024"
description = "Generate a REUSE-style LICENSES/ folder and third-party attribution from a Cargo dependency tree."
license = "MIT OR Apache-2.0"
repository = "https://github.com/miniex/cargo-tribute"

[dependencies]
cargo_metadata = "0.23.1"
serde = { version = "1.0.228", features = ["derive"] }
spdx = "0.13.4"
toml = "1.1.2"

# cargo-binstall: fetch a prebuilt tarball from the release for tag v{version}
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"
