[package]
name = "cargo-tribute"
version = "0.6.0"
edition = "2024"
description = "Generate a REUSE-style LICENSES/ folder and third-party attribution from a Cargo dependency tree."
license = "MIT OR Apache-2.0"
repository = "https://github.com/miniex/cargo-tribute"
homepage = "https://github.com/miniex/cargo-tribute"
readme = "README.md"
keywords = ["license", "attribution", "reuse", "spdx", "compliance"]
categories = ["development-tools::cargo-plugins"]
# the preview gif is only for the rendered README; keep it out of the published crate.
exclude = ["assets"]

[dependencies]
cargo_metadata = "0.23.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# `text` bundles every SPDX license and exception body, so no texts are hand-maintained;
# `detection` powers --audit (matching the license files crates actually ship).
spdx = { version = "0.13.4", features = ["text", "detection"] }
toml = "1.1.2"

[dev-dependencies]
# only to parse the --format cyclonedx output in the e2e tests
serde_json = "1.0.145"

# cargo-binstall: fetch a prebuilt tarball from the release for tag v{version}
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"
