[package]
name = "cargo-tribute"
version = "0.9.0"
edition = "2024"
description = "Generate a REUSE-style LICENSES/ folder and third-party attribution from a Cargo dependency tree."
license = "MIT OR Apache-2.0"
repository = "https://github.com/miniex/cargo-tribute"
homepage = "https://github.com/miniex/cargo-tribute"
readme = "README.md"
keywords = ["license", "attribution", "reuse", "spdx", "compliance"]
categories = ["development-tools::cargo-plugins"]
# the preview gif is only for the rendered README; keep it out of the published crate.
exclude = ["assets"]

[features]
default = []
# --audit matches shipped license files against the corpus; it pulls in spdx's text
# detection (regex, aho-corasick), so it is opt-in. prebuilt release binaries enable it.
audit = ["spdx/detection"]

[dependencies]
cargo_metadata = "0.23.1"
# lean feature set: no color stack; parse errors are remapped to our exit code 3.
clap = { version = "4.6.2", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
    "suggestions",
    "error-context",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# `text` bundles every SPDX license and exception body, so no texts are hand-maintained.
spdx = { version = "0.13.4", features = ["text"] }
toml = "1.1.3"

[dev-dependencies]
# only to parse the --format cyclonedx output in the e2e tests
serde_json = "1.0.150"

# cargo-binstall: fetch a prebuilt tarball from the release for tag v{version}
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"
